deployment-db-mysql-travellist.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-travellist
  namespace: travellist
spec:
  selector:
    app: travellist-db
  ports:
    - port: 3306
      targetPort: 3306
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-deployment
  namespace: travellist
  labels:
    app: travellist-db
spec:
  # serviceName: db
  replicas: 5
  selector:
    matchLabels:
      app: travellist-db
  template:
    metadata:
      labels:
       app: travellist-db
    spec:
      containers:
      - name:  travellist
        image:  mysql:5.7
        resources:
        ports:
        - containerPort:  3306
          name:  travellist
        volumeMounts:
        - name: db-config
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: db-config
          configMap:
            name: db-config
        - name: db-travellist-volume-claim
          persistentVolumeClaim:
            claimName: db-travellist-volume-claim
