deployment-app-nginx-travellist.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-travellist
  namespace: travellist
spec:
  selector:
    app: travellist-app
  ports:
    - port: 80
      targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travellist-ingress
  namespace: travellist
  labels:
    name: travellist-ingress
spec:
  rules:
  - host: travellist.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-travellist
            port:
              number: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: travellist
  labels:
    app: travellist-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: travellist-app
  strategy:       
    type: Recreate
  template:
    metadata:
      labels:
        app: travellist
    spec:
      containers:
      - name:  app-travellist
        image:  zodysatria/travellist:latest
        resources:
        ports:
        - containerPort:  80
          name:  travellist
        volumeMounts:
        - name: app-config
          mountPath: /etc/nginx/conf.d
      volumes:
        - name: app-config
          configMap:
            name: app-config
